--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+v0.5 - 18-03-2015 - Pierre Van Glabeke
+* ajout traduction (en) aide intégrée
+
+v0.4 - 18-03-2015 - Pierre Van Glabeke
+* modifs css/img pour affichage mobile
+* modifs html
+
 v0.3 - 16-03-2015 - Pierre Van Glabeke
 * ajout configurateur pour news
 * ajout aide intégrée
