--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+v0.6 (19-03-2015) Pierre Van Glabeke
+* correction bug config
+
 v0.5 - 18-03-2015 - Pierre Van Glabeke
 * ajout traduction (en) aide intégrée
 
