--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+v0.7 (27-03-2015) Pierre Van Glabeke
+* Tous les tags aboutissent à Tous les tags.
+* transparence image
+
 v0.6 (19-03-2015) Pierre Van Glabeke
 * correction bug config
 
