--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+v0.8 (11-07-2015) Pierre Van Glabeke
+* combo menu (simplemenu/menu/aucun)
+
 v0.7 (27-03-2015) Pierre Van Glabeke
 * Tous les tags aboutissent à Tous les tags.
 * transparence image
