--- a/changelog
+++ b/changelog
@@ -1,3 +1,8 @@
+v0.9 (12-03-2016) Pierre Van Glabeke
+* modifs css (yc menu 1.9)
+* heritage de thème mustek
+* dc2.8 requis
+
 v0.8 (11-07-2015) Pierre Van Glabeke
 * combo menu (simplemenu/menu/aucun)
 
