--- a/changelog
+++ b/changelog
@@ -1,3 +1,8 @@
+v1.0 (11-11-2017) Pierre Van Glabeke
+* modifs css et html
+* localisation
+* dc2.9 requis
+
 v0.9 (12-03-2016) Pierre Van Glabeke
 * modifs css (yc menu 1.9)
 * heritage de thème mustek
