--- a/locales/fr/main.po
+++ b/locales/fr/main.po
@@ -1,18 +1,25 @@
 # Language: Français
-# Module: noviny2 - 0.8
-# Date: 2015-07-12 16:50:56
-# Translated with translater 2015.03.02
+# Module: noviny2 - 1.0
+# Date: 2017-11-12 00:23:20
+# Translated with translater 2017.05.10
 
 msgid ""
 msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
-"Project-Id-Version: noviny2 0.8\n"
+"Project-Id-Version: noviny2 1.0\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2015-07-12T16:50:56+00:00\n"
+"PO-Revision-Date: 2017-11-12T00:23:20+00:00\n"
 "Last-Translator: brol\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+
+#: _config.php:49
+#: _config.php:61
+#: _config.php:73
+msgid "File %s does not exist and directory %s is not writable."
+msgstr "Le fichier %s n'existe pas et le répertoire %s n'est pas accessible en écriture."
 
 #: _config.php:179
 msgid "Menu to display:"
@@ -39,4 +46,8 @@ msgstr "Afficher Overview"
 #: _config.php:216
 msgid "Display Breaking news"
 msgstr "Afficher Dernières nouvelles"
+
+#: tpl/_footer.html:9
+msgid "Theme"
+msgstr "Thème"
 
