--- a/locales/fr/public.po
+++ b/locales/fr/public.po
@@ -1,45 +1,49 @@
 # Language: Français
-# Module: noviny2 - 0.8
-# Date: 2015-07-12 16:50:56
-# Translated with translater 2015.03.02
+# Module: noviny2 - 1.0
+# Date: 2017-11-12 00:23:20
+# Translated with translater 2017.05.10
 
 msgid ""
 msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
-"Project-Id-Version: noviny2 0.8\n"
+"Project-Id-Version: noviny2 1.0\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2015-07-12T16:50:56+00:00\n"
+"PO-Revision-Date: 2017-11-12T00:23:20+00:00\n"
 "Last-Translator: brol\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-msgid "Entry next"
-msgstr "Billet suivant"
-
-msgid "Entry previous"
-msgstr "Billet précédent"
-
-msgid "Comments:"
-msgstr "Commentaires :"
-
+#: tpl/_more.html:5
 msgid "Last update:"
 msgstr "Dernière mise à jour :"
 
+#: tpl/inc-news.html:2
 msgid "Breaking news"
 msgstr "Dernières nouvelles"
 
-msgid "This tag's entries feed"
-msgstr "Fil de billets de ce tag"
+#: tpl/inc-post.html:34
+msgid "Entry previous"
+msgstr "Billet précédent"
 
+#: tpl/inc-post.html:36
+msgid "Entry next"
+msgstr "Billet suivant"
+
+#: tpl/inc-tag.html:4
+msgid "This tag's entries feed"
+msgstr "Fil des billets de ce tag"
+
+#: tpl/inc-tag.html:8
 msgid "This tag's comments feed"
-msgstr "Fil de commentaires de ce tag"
+msgstr "Fil des commentaires de ce tag"
 
 msgid "This category's entries feed"
-msgstr "Fil de billets de cette catégorie"
+msgstr "Fil des billets de cette catégorie"
 
 msgid "This category's comments feed"
-msgstr "Fil de commentaires de cette catégorie"
+msgstr "Fil des commentaires de cette catégorie"
 
 msgid "This author's entries feed"
 msgstr "Fil des billets de cet auteur"
