--- a/changelog
+++ b/changelog
@@ -1,39 +1,43 @@
-v1.0 (11-11-2017) Pierre Van Glabeke
+v1.1 - 27/11/2019 - Pierre Van Glabeke
+* modifs html
+* dc2.15 requis
+
+v1.0 - 11/11/2017 - Pierre Van Glabeke
 * modifs css et html
 * localisation
 * dc2.9 requis
 
-v0.9 (12-03-2016) Pierre Van Glabeke
+v0.9 - 12/03/2016 - Pierre Van Glabeke
 * modifs css (yc menu 1.9)
 * heritage de thème mustek
 * dc2.8 requis
 
-v0.8 (11-07-2015) Pierre Van Glabeke
+v0.8 - 11/07/2015 - Pierre Van Glabeke
 * combo menu (simplemenu/menu/aucun)
 
-v0.7 (27-03-2015) Pierre Van Glabeke
+v0.7 - 27/03/2015 - Pierre Van Glabeke
 * Tous les tags aboutissent à Tous les tags.
 * transparence image
 
-v0.6 (19-03-2015) Pierre Van Glabeke
+v0.6 - 19/03/2015 - Pierre Van Glabeke
 * correction bug config
 
-v0.5 - 18-03-2015 - Pierre Van Glabeke
+v0.5 - 18/03/2015 - Pierre Van Glabeke
 * ajout traduction (en) aide intégrée
 
-v0.4 - 18-03-2015 - Pierre Van Glabeke
+v0.4 - 18/03/2015 - Pierre Van Glabeke
 * modifs css/img pour affichage mobile
 * modifs html
 
-v0.3 - 16-03-2015 - Pierre Van Glabeke
+v0.3 - 16/03/2015 - Pierre Van Glabeke
 * ajout configurateur pour news
 * ajout aide intégrée
 * réorganisation des includes
 
-v0.2 - 16-03-2015 - Pierre Van Glabeke
+v0.2 - 16/03/2015 - Pierre Van Glabeke
 * ajout configurateur pour insert select et overview
 
-v0.1 - 14-03-2015 - Pierre Van Glabeke
+v0.1 - 14/03/2015 - Pierre Van Glabeke
 * fork de Noviny de Olivier Meunier
 * html
 * simplemenu requis
